# StackOverflowFx

./: CMakeLists.txt  README.md
resource/: stackoverfloweditor.uidesc
source/: stackoverflowcids.h  stackoverflowcontroller.cpp  stackoverflowcontroller.h  stackoverflowentry.cpp  stackoverflowprocessor.cpp  stackoverflowprocessor.h  version.h
